--- a/login.html
+++ b/login.html
@@ -138,47 +138,38 @@
     <div class="container">
         <h1>TCP (Transmission Control Protocol) - โปรโตคอลควบคุมการส่งข้อมูลแบบมุ่งเน้นการเชื่อมต่อ</h1>
 
-        <div class="card" onclick="toggleContent(1)">
-            <div class="card-content">
-                <h2>ภาพรวม TCP</h2>
-                <p>การอธิบายพื้นฐานเกี่ยวกับโปรโตคอล TCP ในการส่งข้อมูลที่เชื่อถือได้</p>
-            </div>
-        </div>
-        <div class="content" id="content-1">
-            <p>TCP (Transmission Control Protocol) เป็นโปรโตคอลที่ทำงานที่ชั้น <strong>Transport Layer</strong> ของโมเดล OSI และถูกออกแบบมาเพื่อให้การส่งข้อมูลที่มีความน่าเชื่อถือระหว่างสองเครื่องคอมพิวเตอร์ในเครือข่าย โดย TCP รับประกันว่าข้อมูลจะถูกส่งถึงปลายทางอย่างสมบูรณ์และถูกต้องตามลำดับ</p>
-               <!-- เพิ่มรูป + คำอธิบาย -->
+<div class="card" onclick="toggleContent(1)">
+    <div class="card-content">
+        <h2>ภาพรวม TCP</h2>
+        <p>การอธิบายพื้นฐานเกี่ยวกับโปรโตคอล TCP ในการส่งข้อมูลที่เชื่อถือได้</p>
+    </div>
+</div>
+<div class="content" id="content-1">
+    <p>TCP (Transmission Control Protocol) เป็นโปรโตคอลที่ทำงานที่ชั้น <strong>Transport Layer</strong> ของโมเดล OSI และถูกออกแบบมาเพื่อให้การส่งข้อมูลที่มีความน่าเชื่อถือระหว่างสองเครื่องคอมพิวเตอร์ในเครือข่าย โดย TCP รับประกันว่าข้อมูลจะถูกส่งถึงปลายทางอย่างสมบูรณ์และถูกต้องตามลำดับ</p>
+    
+    <!-- เพิ่มรูปภาพจาก ImgBB -->
     <div style="text-align:center; margin-top:20px;">
-        <img src="https://i.ibb.co/351mCFF3/D087-E057-72-E7-45-BD-BBEC-E43-D07-BFB31-D.png" 
-             alt="TCP vs UDP Diagram" 
-             style="max-width:100%; height:auto; border-radius:8px; box-shadow:0 4px 15px rgba(0,0,0,0.1);">
+        <img src="https://i.ibb.co/tMWKHC5X" alt="TCP Overview Diagram" style="max-width:100%; height:auto; border-radius:8px; box-shadow:0 4px 15px rgba(0,0,0,0.1);">
         <p style="font-size:0.9rem; color:#7f6a44; margin-top:8px;">
-            ภาพเปรียบเทียบความแตกต่างระหว่าง TCP และ UDP
+            ภาพแสดงภาพรวมการทำงานของ TCP
         </p>
     </div>
 </div>
 
+        <div class="card" onclick="toggleContent(2)">
+            <div class="card-content">
+                <h2>การทำงานหลักของ TCP</h2>
+                <p>การเชื่อมต่อแบบ Three-Way Handshake และวิธีการควบคุมการไหลของข้อมูล</p>
+            </div>
         </div>
-<div class="card" onclick="toggleContent(2)">
-    <div class="card-content">
-        <h2>การทำงานหลักของ TCP</h2>
-        <p>การเชื่อมต่อแบบ Three-Way Handshake และวิธีการควบคุมการไหลของข้อมูล</p>
-    </div>
-</div>
-<div class="content" id="content-2">
-    <p><strong>Three-Way Handshake:</strong> เป็นขั้นตอนการเริ่มต้นการเชื่อมต่อ ซึ่งประกอบด้วยการส่งแพ็กเก็ต 3 ครั้ง: <strong>SYN (Synchronize)</strong> จากต้นทาง, <strong>SYN-ACK (Synchronize-Acknowledge)</strong> จากปลายทาง, และ <strong>ACK (Acknowledge)</strong> จากต้นทางอีกครั้งเพื่อยืนยันการเชื่อมต่อ </p>
-    <p><strong>การส่งข้อมูล:</strong> เมื่อการเชื่อมต่อสำเร็จแล้ว, TCP จะทำการแบ่งข้อมูลออกเป็นส่วนย่อยๆ ที่เรียกว่า <strong>Segment</strong> และส่งไปตามลำดับ โดยใช้ <strong>Sequence Numbers</strong> เพื่อติดตามลำดับของข้อมูล</p>
-    <p><strong>การยืนยันการรับข้อมูล (Acknowledgement):</strong> เมื่อปลายทางได้รับ Segment แล้วจะส่ง ACK กลับมายังต้นทางเพื่อยืนยันว่าข้อมูลได้รับเรียบร้อยแล้ว หากไม่มีการส่ง ACK กลับมา ต้นทางจะทำการส่งข้อมูลใหม่</p>
-    <p><strong>การควบคุมการไหล (Flow Control):</strong> TCP ใช้เทคนิคที่เรียกว่า <strong>Sliding Window</strong> เพื่อควบคุมปริมาณข้อมูลที่สามารถส่งได้ในแต่ละช่วงเวลา ป้องกันไม่ให้ปลายทางได้รับข้อมูลมากเกินไปจนเกิดปัญหา</p>
-    <p><strong>การจัดการความแออัด (Congestion Control):</strong> TCP ใช้เทคนิคต่างๆ เช่น <strong>Slow Start</strong> และ <strong>Congestion Avoidance</strong> เพื่อควบคุมปริมาณข้อมูลที่ส่งในช่วงที่มีการแออัดในเครือข่าย เพื่อลดการสูญเสียข้อมูล</p>
-    
-    <!-- เพิ่มรูปภาพจาก ImgBB -->
-    <div style="text-align:center; margin-top:20px;">
-        <img src="https://i.ibb.co/tMWKHC5X" alt="TCP vs UDP Diagram" style="max-width:100%; height:auto; border-radius:8px; box-shadow:0 4px 15px rgba(0,0,0,0.1);">
-        <p style="font-size:0.9rem; color:#7f6a44; margin-top:8px;">
-            ภาพแสดงการทำงานหลักของ TCP
-        </p>
-    </div>
-</div>
+        <div class="content" id="content-2">
+            <p><strong>Three-Way Handshake:</strong> เป็นขั้นตอนการเริ่มต้นการเชื่อมต่อ ซึ่งประกอบด้วยการส่งแพ็กเก็ต 3 ครั้ง: <strong>SYN (Synchronize)</strong> จากต้นทาง, <strong>SYN-ACK (Synchronize-Acknowledge)</strong> จากปลายทาง, และ <strong>ACK (Acknowledge)</strong> จากต้นทางอีกครั้งเพื่อยืนยันการเชื่อมต่อ </p>
+            <p><strong>การส่งข้อมูล:</strong> เมื่อการเชื่อมต่อสำเร็จแล้ว, TCP จะทำการแบ่งข้อมูลออกเป็นส่วนย่อยๆ ที่เรียกว่า <strong>Segment</strong> และส่งไปตามลำดับ โดยใช้ <strong>Sequence Numbers</strong> เพื่อติดตามลำดับของข้อมูล</p>
+            <p><strong>การยืนยันการรับข้อมูล (Acknowledgement):</strong> เมื่อปลายทางได้รับ Segment แล้วจะส่ง ACK กลับมายังต้นทางเพื่อยืนยันว่าข้อมูลได้รับเรียบร้อยแล้ว หากไม่มีการส่ง ACK กลับมา ต้นทางจะทำการส่งข้อมูลใหม่</p>
+            <p><strong>การควบคุมการไหล (Flow Control):</strong> TCP ใช้เทคนิคที่เรียกว่า <strong>Sliding Window</strong> เพื่อควบคุมปริมาณข้อมูลที่สามารถส่งได้ในแต่ละช่วงเวลา ป้องกันไม่ให้ปลายทางได้รับข้อมูลมากเกินไปจนเกิดปัญหา</p>
+            <p><strong>การจัดการความแออัด (Congestion Control):</strong> TCP ใช้เทคนิคต่างๆ เช่น **Slow Start** และ **Congestion Avoidance** เพื่อควบคุมปริมาณข้อมูลที่ส่งในช่วงที่มีการแออัดในเครือข่าย เพื่อลดการสูญเสียข้อมูล</p>
+        </div>
+
         <div class="card" onclick="toggleContent(3)">
             <div class="card-content">
                 <h2>  ข้อเสียของTCP</h2>
@@ -225,7 +216,7 @@
 
     <!-- เพิ่มรูป + คำอธิบาย -->
     <div style="text-align:center; margin-top:20px;">
-        <img src="https://ibb.co/tMWKHC5X" 
+        <img src="https://i.ibb.co/351mCFF3/D087-E057-72-E7-45-BD-BBEC-E43-D07-BFB31-D.png" 
              alt="TCP vs UDP Diagram" 
              style="max-width:100%; height:auto; border-radius:8px; box-shadow:0 4px 15px rgba(0,0,0,0.1);">
         <p style="font-size:0.9rem; color:#7f6a44; margin-top:8px;">
