--- a/login.html
+++ b/login.html
@@ -198,6 +198,12 @@
                 <li><strong>Reliability:</strong> การส่งข้อมูลที่มีความน่าเชื่อถือสูง เหมาะสำหรับแอปพลิเคชันที่ข้อมูลห้ามสูญหาย เช่น การโอนไฟล์หรือการท่องเว็บ</li>
                 <li><strong>Error Checking:</strong> มีการตรวจสอบข้อผิดพลาดและส่งข้อมูลซ้ำหากจำเป็น ทำให้มั่นใจได้ว่าข้อมูลที่ได้รับถูกต้อง</li>
                 <li><strong>Efficiency:</strong> แม้จะมีการทำงานที่ซับซ้อน แต่ก็มีประสิทธิภาพในการจัดการการส่งข้อมูลจำนวนมาก</li>
+                <li><strong>Efficiency:</strong> การควบคุมการไหล (Flow Control)
+                        TCP ปรับอัตราการส่งข้อมูลให้เหมาะสมกับความสามารถในการประมวลผลของผู้รับ เพื่อป้องกันไม่ให้ผู้รับถูกท่วมไปด้วยข้อมูลที่มากเกินไปจนไม่สามารถจัดการได้</li>
+                <li><strong>Efficiency:</strong> การควบคุมความแออัด (Congestion Control)
+                        TCP มีกลไกในการตรวจจับและจัดการกับความแออัดในเครือข่าย ทำให้การส่งข้อมูลเป็นไปอย่างมีเสถียรภาพ และลดโอกาสเกิดปัญหาข้อมูลสูญหายเนื่องจากเครือข่ายทำงานหนักเกินไป 
+</li>
+
             </ul>
         </div>
 <div class="card" onclick="toggleContent(5)">
@@ -265,4 +271,5 @@
 </body>
 
 </html>
+
 
