--- a/login.html
+++ b/login.html
@@ -135,9 +135,6 @@
 
 <body>
 
-    <div class="container">
-        <h1>TCP (Transmission Control Protocol) - โปรโตคอลควบคุมการส่งข้อมูลแบบมุ่งเน้นการเชื่อมต่อ</h1>
-
 <div class="card" onclick="toggleContent(1)">
     <div class="card-content">
         <h2>ภาพรวม TCP</h2>
@@ -147,13 +144,12 @@
 <div class="content" id="content-1">
     <p>TCP (Transmission Control Protocol) เป็นโปรโตคอลที่ทำงานที่ชั้น <strong>Transport Layer</strong> ของโมเดล OSI และถูกออกแบบมาเพื่อให้การส่งข้อมูลที่มีความน่าเชื่อถือระหว่างสองเครื่องคอมพิวเตอร์ในเครือข่าย โดย TCP รับประกันว่าข้อมูลจะถูกส่งถึงปลายทางอย่างสมบูรณ์และถูกต้องตามลำดับ</p>
     
-    <!-- เพิ่มรูปภาพ -->
     <div style="text-align:center; margin-top:20px;">
         <img src="https://i.ibb.co/rG10QyJs/IMG-0110.jpg" 
              alt="TCP Overview Diagram" 
-             style="max-width:100%; height:auto; border-radius:8px; box-shadow:0 4px 15px rgba(0,0,0,0.1);">
+             style="max-width:400px; width:100%; height:auto; border-radius:8px; box-shadow:0 4px 15px rgba(0,0,0,0.1);">
         <p style="font-size:0.9rem; color:#7f6a44; margin-top:8px;">
-            ภาพแสดงภาพรวมการทำงานของ OSI และชั้นที่ 4 ของ TCP
+            ภาพแสดงภาพรวมการทำงานของ OSI
         </p>
     </div>
 </div>
@@ -271,5 +267,6 @@
 </body>
 
 </html>
+
 
 
