--- a/login.html
+++ b/login.html
@@ -135,7 +135,8 @@
 
 <body>
 <div class="container">
-    <h1>TCP(Tranmission Control Protocol-โปรโตคอลควบคุมการส่งข้อมูลแบบมุ่งเน้นการเชื่อมต่อ</h1>
+    <h1>TCP(Tranmission Control Protocol<br>
+        โปรโตคอลควบคุมการส่งข้อมูลแบบมุ่งเน้นการเชื่อมต่อ</h1>
 
     
 <div class="card" onclick="toggleContent(1)">
@@ -270,6 +271,7 @@
 </body>
 
 </html>
+
 
 
 
