--- a/login.html
+++ b/login.html
@@ -135,18 +135,18 @@
 
 <body>
 <div class="container">
-    <h1>TCP(Tranmission Control Protocol<br>
+    <h1>TCP(Tranmission Control Protocol)<br>
         โปรโตคอลควบคุมการส่งข้อมูลแบบมุ่งเน้นการเชื่อมต่อ</h1>
 
     
 <div class="card" onclick="toggleContent(1)">
     <div class="card-content">
-        <h2>ภาพรวม TCP</h2>
+        <h2>TCP คืออะไร?</h2>
         <p>การอธิบายพื้นฐานเกี่ยวกับโปรโตคอล TCP ในการส่งข้อมูลที่เชื่อถือได้</p>
     </div>
 </div>
 <div class="content" id="content-1">
-    <p>TCP (Transmission Control Protocol) เป็นโปรโตคอลที่ทำงานที่ชั้น <strong>Transport Layer</strong> ของโมเดล OSI และถูกออกแบบมาเพื่อให้การส่งข้อมูลที่มีความน่าเชื่อถือระหว่างสองเครื่องคอมพิวเตอร์ในเครือข่าย โดย TCP รับประกันว่าข้อมูลจะถูกส่งถึงปลายทางอย่างสมบูรณ์และถูกต้องตามลำดับ</p>
+    <p>TCP (Transmission Control Protocol) เป็นโปรโตคอลที่ทำงานในชั้น <strong>Transport Layer</strong> ของโมเดล OSI และถูกออกแบบมาเพื่อให้การส่งข้อมูลที่มีความน่าเชื่อถือระหว่างสองเครื่องคอมพิวเตอร์ในเครือข่าย โดย TCP รับประกันว่าข้อมูลจะถูกส่งถึงปลายทางอย่างสมบูรณ์และถูกต้องตามลำดับ</p>
     
     <div style="text-align:center; margin-top:20px;">
         <img src="https://i.ibb.co/rG10QyJs/IMG-0110.jpg" 
@@ -174,7 +174,7 @@
         <div class="card" onclick="toggleContent(3)">
             <div class="card-content">
                 <h2>  ข้อเสียของTCP</h2>
-                <p>ข้อเสียของ TCP </p>
+                <p>ข้อเสียของ TCP มีอะไรบ้าง </p>
             </div>
         </div>
         <div class="content" id="content-3">
@@ -271,6 +271,7 @@
 </body>
 
 </html>
+
 
 
 
