--- a/login.html
+++ b/login.html
@@ -183,7 +183,7 @@
                 <li><strong>ประสิทธิภาพต่ำในบางกรณี (Lower Performance):</strong> เนื่องจากต้องใช้กระบวนการที่ซับซ้อนในการส่งข้อมูล ทำให้ TCP มีความเร็วที่ช้ากว่า UDP โดยเฉพาะในแอปพลิเคชันที่ต้องการความเร็วสูงและยอมให้ข้อมูลขาดหายได้เล็กน้อย เช่น การสตรีมวิดีโอ, เกมออนไลน์ หรือการโทรศัพท์ผ่านอินเทอร์เน็ต (VoIP)</li>
                 <li><strong>ค่าใช้จ่ายสูง (Overhead):</strong> แต่ละแพ็กเก็ตของ TCP จะมีส่วนหัวข้อมูล (Header) ขนาดใหญ่ถึง 20-60 ไบต์ ซึ่งใหญ่กว่าส่วนหัวของ UDP ที่มีขนาดเพียง 8 ไบต์เท่านั้น ทำให้ต้องใช้แบนด์วิธในการส่งข้อมูลเพิ่มขึ้น และทำให้ข้อมูลจริงที่ส่งมีสัดส่วนน้อยลงเมื่อเทียบกับข้อมูลทั้งหมด</li>
                 <li><strong>ความหน่วง (Latency):</strong> กระบวนการทำงานของ TCP ที่ต้องรอการตอบรับ (Acknowledgement) จากปลายทางก่อนจะส่งแพ็กเก็ตชุดถัดไป ทำให้เกิดความหน่วง หรือดีเลย์ขึ้นมา ซึ่งเป็นปัญหาใหญ่สำหรับแอปพลิเคชันที่ต้องการตอบสนองแบบเรียลไทม์</li>
-                <li><strong>ไม่เหมาะกับการส่งข้อมูลแบบกระจาย (Multicast):</strong> TCP ถูกออกแบบมาเพื่อการส่งข้อมูลแบบหนึ่งต่อหนึ่ง (Unicast) ทำให้ไม่รองรับการส่งข้อมูลไปยังหลายๆ เครื่องพร้อมกัน (Multicast) ซึ่งถ้าต้องการส่งข้อมูลให้หลายเครื่องพร้อมกันต้องใช้โปรโตคอลอื่น หรือต้องใช้เทคนิคที่ซับซ้อนเข้ามาช่วยครับ</li>
+                <li><strong>ไม่เหมาะกับการส่งข้อมูลแบบกระจาย (Multicast):</strong> TCP ถูกออกแบบมาเพื่อการส่งข้อมูลแบบหนึ่งต่อหนึ่ง (Unicast) ทำให้ไม่รองรับการส่งข้อมูลไปยังหลายๆ เครื่องพร้อมกัน (Multicast) ซึ่งถ้าต้องการส่งข้อมูลให้หลายเครื่องพร้อมกันต้องใช้โปรโตคอลอื่น หรือต้องใช้เทคนิคที่ซับซ้อนเข้ามาช่วย</li>
             </ul>
         </div>
 
@@ -198,8 +198,7 @@
                 <li><strong>Reliability:</strong> การส่งข้อมูลที่มีความน่าเชื่อถือสูง เหมาะสำหรับแอปพลิเคชันที่ข้อมูลห้ามสูญหาย เช่น การโอนไฟล์หรือการท่องเว็บ</li>
                 <li><strong>Error Checking:</strong> มีการตรวจสอบข้อผิดพลาดและส่งข้อมูลซ้ำหากจำเป็น ทำให้มั่นใจได้ว่าข้อมูลที่ได้รับถูกต้อง</li>
                 <li><strong>Efficiency:</strong> แม้จะมีการทำงานที่ซับซ้อน แต่ก็มีประสิทธิภาพในการจัดการการส่งข้อมูลจำนวนมาก</li>
-                <li><strong>Efficiency:</strong> การควบคุมการไหล (Flow Control)
-                        TCP ปรับอัตราการส่งข้อมูลให้เหมาะสมกับความสามารถในการประมวลผลของผู้รับ เพื่อป้องกันไม่ให้ผู้รับถูกท่วมไปด้วยข้อมูลที่มากเกินไปจนไม่สามารถจัดการได้</li>
+                <li><strong>การยืนยันการรับ (Acknowledgement):</strong>  ผู้รับจะส่งการตอบกลับ (ACK) เพื่อยืนยันว่าได้รับข้อมูลแล้ว ทำให้ผู้ส่งทราบว่าข้อมูลมาถึงปลายทางแล้ว</li>
                 <li><strong>Efficiency:</strong> การควบคุมความแออัด (Congestion Control)
                         TCP มีกลไกในการตรวจจับและจัดการกับความแออัดในเครือข่าย ทำให้การส่งข้อมูลเป็นไปอย่างมีเสถียรภาพ และลดโอกาสเกิดปัญหาข้อมูลสูญหายเนื่องจากเครือข่ายทำงานหนักเกินไป 
 </li>
@@ -271,6 +270,7 @@
 </body>
 
 </html>
+
 
 
 
