--- a/index.html
+++ b/index.html
@@ -40,16 +40,18 @@
     </div>
   </div>
 
-  <!-- หน้าเนื้อหา -->
-  <div id="image-section" class="hidden">
-    <img src="https://media.tenor.com/NzTTr3L34Z0AAAAd/kek-dog.gif" alt="Kek Dog Laughing" id="teacher-img">
+<!-- หน้าเนื้อหา -->
+<div id="image-section" class="hidden">
+    <a href="https://i.ibb.co/vXxFvjp/image.png" target="_blank" rel="noopener">
+        <img src="https://i.ibb.co/vXxFvjp/image.png" alt="ภาพอาจารย์" id="teacher-img" class="show-effect">
+    </a>
     <p class="caption">อาจารย์จะให้คะแนนเต็มใช่ไหม</p>
     <div class="button-group">
-      <a href="login.html" class="button-dark">ใช่พร้อมเข้าสู่หน้าเนื้อหา</a>
-      <button class="button-dark" onclick="goBack()">ไม่จ้าย้อนกลับ</button>
+        <a href="login.html" class="button-dark">ใช่พร้อมเข้าสู่หน้าเนื้อหา</a>
+        <button class="button-dark" onclick="goBack()">ไม่จ้าย้อนกลับ</button>
     </div>
-  </div>
 </div>
+
 
 <!-- เพลง YouTube Blue ซ่อน -->
 <iframe id="youtube-music" src="https://www.youtube.com/embed/Kq4dbZJakMs?autoplay=1&loop=1&playlist=Kq4dbZJakMs" frameborder="0" allow="autoplay" allowfullscreen></iframe>
@@ -101,3 +103,4 @@
 
 </body>
 </html>
+
