--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <!-- หน้าเนื้อหา -->
 <div id="image-section" class="hidden">
     <a href="https://i.ibb.co/vXxFvjp/image.png" target="_blank" rel="noopener">
-        <img src="https://i.ibb.co/vXxFvjp/image.png" alt="ภาพอาจารย์" id="teacher-img" class="show-effect">
+       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Sample_User_Icon.png/240px-Sample_User_Icon.png" alt="Test Image">
     </a>
     <p class="caption">อาจารย์จะให้คะแนนเต็มใช่ไหม</p>
     <div class="button-group">
@@ -103,4 +103,5 @@
 
 </body>
 </html>
+
 
