--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
 <!-- หน้าเนื้อหา -->
 <div id="image-section" class="hidden">
-    <a href="https://i.ibb.co/vXxFvjp/image.png" target="_blank" rel="noopener">
-       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Sample_User_Icon.png/240px-Sample_User_Icon.png" alt="Test Image">
+    <a href="https://i.ibb.co/FqWjyLXG/image.jpg" target="_blank" rel="noopener">
+        <img src="https://i.ibb.co/FqWjyLXG/image.jpg" alt="ภาพอาจารย์" id="teacher-img" class="show-effect">
     </a>
     <p class="caption">อาจารย์จะให้คะแนนเต็มใช่ไหม</p>
     <div class="button-group">
@@ -103,5 +103,6 @@
 
 </body>
 </html>
+
 
 
