--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>เสนอ</title>
+  <title>Present</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
     body, h1, p, a, button { margin:0; padding:0; font-family:'Inter',sans-serif; }
@@ -34,7 +34,7 @@
   <!-- หน้าแรก -->
   <div id="intro">
     <h1>เสนอ<br>อาจารย์สุวิทย์ วงศ์คุ้มสิน</h1>
-    <p>โปรดคลิกที่ปุ่มด้านล่างเพื่อเข้าถึงเนื้อหา</p>
+    <p>โปรดคลิกที่ปุ่มด้านล่างเพื่อเข้าถึงหน้าถัดไป</p>
     <div class="button-group">
       <button class="button" onclick="startFestival()">ถัดไป</button>
     </div>
@@ -45,13 +45,12 @@
     <a href="https://i.ibb.co/FqWjyLXG/image.jpg" target="_blank" rel="noopener">
         <img src="https://i.ibb.co/FqWjyLXG/image.jpg" alt="ภาพอาจารย์" id="teacher-img" class="show-effect">
     </a>
-    <p class="caption">อาจารย์จะให้คะแนนเต็มใช่ไหม</p>
+    <p class="caption">อาจารย์ผู้สอน</p>
     <div class="button-group">
-        <a href="login.html" class="button-dark">ใช่พร้อมเข้าสู่หน้าเนื้อหา</a>
-        <button class="button-dark" onclick="goBack()">ไม่จ้าย้อนกลับ</button>
+        <a href="login.html" class="button-dark">เข้าสู่หน้าเนื้อหา</a>
+        <button class="button-dark" onclick="goBack()">ย้อนกลับ</button>
     </div>
 </div>
-
 
 <!-- เพลง YouTube Blue ซ่อน -->
 <iframe id="youtube-music" src="https://www.youtube.com/embed/Kq4dbZJakMs?autoplay=1&loop=1&playlist=Kq4dbZJakMs" frameborder="0" allow="autoplay" allowfullscreen></iframe>
@@ -103,6 +102,7 @@
 
 </body>
 </html>
+
 
 
 
