--- a/login.html
+++ b/login.html
@@ -197,8 +197,7 @@
             <ul>
                 <li><strong>Reliability:</strong> การส่งข้อมูลที่มีความน่าเชื่อถือสูง เหมาะสำหรับแอปพลิเคชันที่ข้อมูลห้ามสูญหาย เช่น การโอนไฟล์หรือการท่องเว็บ</li>
                 <li><strong>Error Checking:</strong> มีการตรวจสอบข้อผิดพลาดและส่งข้อมูลซ้ำหากจำเป็น ทำให้มั่นใจได้ว่าข้อมูลที่ได้รับถูกต้อง</li>
-                <li><strong>Efficiency:</strong> แม้จะมีการทำงานที่ซับซ้อน แต่ก็มีประสิทธิภาพในการจัดการการส่งข้อมูลจำนวนมาก</li>
-                <li><strong>การยืนยันการรับ (Acknowledgement):</strong>  ผู้รับจะส่งการตอบกลับ (ACK) เพื่อยืนยันว่าได้รับข้อมูลแล้ว ทำให้ผู้ส่งทราบว่าข้อมูลมาถึงปลายทางแล้ว</li>
+                <li><strong>การยืนยันการรับ Acknowledgement:</strong>  ผู้รับจะส่งการตอบกลับ (ACK) เพื่อยืนยันว่าได้รับข้อมูลแล้ว ทำให้ผู้ส่งทราบว่าข้อมูลมาถึงปลายทางแล้ว</li>
                 <li><strong>Efficiency:</strong> การควบคุมความแออัด (Congestion Control)
                         TCP มีกลไกในการตรวจจับและจัดการกับความแออัดในเครือข่าย ทำให้การส่งข้อมูลเป็นไปอย่างมีเสถียรภาพ และลดโอกาสเกิดปัญหาข้อมูลสูญหายเนื่องจากเครือข่ายทำงานหนักเกินไป 
 </li>
@@ -270,6 +269,7 @@
 </body>
 
 </html>
+
 
 
 
