--- a/login.html
+++ b/login.html
@@ -156,6 +156,7 @@
             ภาพแสดงภาพรวมการทำงานของ OSI
         </p>
     </div>
+ </div>
         <div class="card" onclick="toggleContent(2)">
             <div class="card-content">
                 <h2>การทำงานหลักของ TCP</h2>
@@ -268,6 +269,7 @@
 </body>
 
 </html>
+
 
 
 
