--- a/login.html
+++ b/login.html
@@ -146,16 +146,8 @@
     </div>
 </div>
 <div class="content" id="content-1">
-    <p>TCP (Transmission Control Protocol) เป็นโปรโตคอลที่ทำงานในชั้น <strong>Transport Layer</strong> ของโมเดล OSI และถูกออกแบบมาเพื่อให้การส่งข้อมูลที่มีความน่าเชื่อถือระหว่างสองเครื่องคอมพิวเตอร์ในเครือข่าย โดย TCP รับประกันว่าข้อมูลจะถูกส่งถึงปลายทางอย่างสมบูรณ์และถูกต้องตามลำดับ</p>
-    
-    <div style="text-align:center; margin-top:20px;">
-        <img src="https://i.ibb.co/rG10QyJs/IMG-0110.jpg" 
-             alt="TCP Overview Diagram" 
-             style="max-width:400px; width:100%; height:auto; border-radius:8px; box-shadow:0 4px 15px rgba(0,0,0,0.1);">
-        <p style="font-size:0.9rem; color:#7f6a44; margin-top:8px;">
-            ภาพแสดงภาพรวมการทำงานของ OSI
-        </p>
-    </div>
+    <p>TCP (Transmission Control Protocol) เป็นโปรโตคอลที่ทำงานในชั้น <strong>Transport Layer</strong> ของโมเดล OSI และถูกออกแบบมาเพื่อให้การส่งข้อมูลที่มีความน่าเชื่อถือระหว่างสองเครื่องคอมพิวเตอร์ในเครือข่าย โดย TCP รับประกันว่าข้อมูลจะถูกส่งถึงปลายทางอย่างสมบูรณ์และถูกต้องตามลำดับ
+    </p>
  </div>
         <div class="card" onclick="toggleContent(2)">
             <div class="card-content">
@@ -269,6 +261,7 @@
 </body>
 
 </html>
+
 
 
 
